fix: disable broken z-index

--- a/web/src/components/modals/Notification/NotificationHost.css
+++ b/web/src/components/modals/Notification/NotificationHost.css
@@ -25,7 +25,6 @@
 
 .NotificationHost {
   position: absolute;
-  z-index: 1;
   box-sizing: border-box;
   display: flex;
 
